<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ocher"
    android:padding="8dp"
    tools:context="profileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="360dp"
        android:layout_height="207dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/Darkocher"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="116dp"
            android:layout_height="115dp"
            android:layout_margin="12dp"
            android:src="@drawable/baseline_person_add_alt_24"
            app:civ_border_color="@color/olive"
            app:civ_border_overlay="@null"
            app:civ_border_width="3dp" />

        <TextView
            android:drawableEnd="@drawable/baseline_verified_24"
            android:drawablePadding="10dp"
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="20dp"
            android:text="Navdeep Singh"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="48dp"
            android:text="nsb95696@gmail.com"
            android:textColor="@color/black"

            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="किसान"

            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="75dp"

            android:gravity="center"
            android:text="8836-8355-6398"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="330dp"
            android:layout_height="49dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="135dp"
            android:layout_marginEnd="12dp"

            android:layout_marginBottom="12dp"
            android:background="@drawable/box_bg2"
            android:drawableStart="@drawable/baseline_location_on_24"
            android:drawablePadding="10dp"
            android:padding="2dp"

            android:text="by pass road near icici bank Robertaganj Sonebhadra Uttar Pradesh 231216"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:textStyle="normal" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="360dp"
        android:drawablePadding="10dp"
        android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:drawableStart="@drawable/baseline_shopping_cart_24"
        android:background="@drawable/boxbg"
        android:text="@string/order"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="360dp"
        android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
        android:drawablePadding="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/boxbg"
        android:drawableStart="@drawable/baseline_history_24"

        android:text="@string/paytem_history"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/boxbg"
        android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
        android:drawableStart="@drawable/baseline_edit_location_alt_24"
        android:text="@string/address"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="@drawable/boxbg"

        android:drawableStart="@drawable/baseline_edit_document_24"
        android:drawablePadding="10dp"
        android:text="@string/documents"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginTop="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="@drawable/boxbg"
        android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
        android:drawableStart="@drawable/baseline_workspace_premium_24"
        android:drawablePadding="10dp"
        android:text="@string/premium"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginTop="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="360dp"
        android:layout_height="wrap_content"

        android:background="@drawable/boxbg"
        android:drawableStart="@drawable/baseline_notifications_24"
        android:drawablePadding="10dp"
        android:text="@string/notification"
        android:layout_marginTop="12sp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintHorizontal_bias="0.0"
        android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
        android:background="@drawable/boxbg"
        android:drawableStart="@drawable/baseline_emoji_people_24"
        android:layout_marginTop="12sp"
        android:drawablePadding="10dp"
        android:text="@string/KYC"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

</androidx.constraintlayout.widget.ConstraintLayout>