<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomePage"
    android:background="@color/green">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="174dp"
        android:layout_height="59dp"
        android:fontFamily="sans-serif"
        android:text="AgriGrow"
        android:textColor="@color/green2"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/farming_made_easy_with_faster_delivery_at_your_doorstep"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.467" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/sign_in_with"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/googlebutton2"
        app:layout_constraintStart_toStartOf="@+id/googlebutton2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.489" />

    <Button
        android:id="@+id/button3"
        :layout_constraintVertical_bias="0.0"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/translucent"
        android:text="Start with Phone"
        android:textAlignment="center"

        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/googlebutton2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/googlebutton2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/googlebutton2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="         Google"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="44dp"
        android:layout_height="47dp"
        app:layout_constraintBottom_toBottomOf="@+id/googlebutton2"
        app:layout_constraintEnd_toEndOf="@+id/googlebutton2"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toStartOf="@+id/googlebutton2"
        app:layout_constraintTop_toTopOf="@+id/googlebutton2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/google_foreground" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginEnd="144dp"

        android:text="Already have an account?  "
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"

        app:layout_constraintStart_toStartOf="@+id/googlebutton2"
        app:layout_constraintTop_toTopOf="@+id/googlebutton2"
        app:layout_constraintVertical_bias="0.826" />

    <Button
        android:id="@+id/button6"
        android:layout_width="114dp"
        android:layout_height="41dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/transparent"
        android:text="@string/signin"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.674"
        app:layout_constraintStart_toStartOf="@+id/textView5"


        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.461" />


</androidx.constraintlayout.widget.ConstraintLayout>